package kpi;

option java_package = "me.bpulse.domain.proto.kpi";
option optimize_for = SPEED;

message Range{
	required sint64 gte = 1;	
	required sint64 lte = 2;
}

message Condition{
	required string attName = 1;	
	required string value = 2;
}

message WhereCondition{
	required Range timeRange = 1;
	optional Range valueRange = 2;
	repeated Condition conditions = 3;
}

message KPIValuesRQ{
	optional WhereCondition whereCondition = 1;
	repeated string groupBy = 2;
}